--- a/egui-d3d11/Cargo.toml
+++ b/egui-d3d11/Cargo.toml
@@ -18,6 +18,7 @@ targets = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]
 [dependencies]
 parking_lot = "0.11.2"
 thiserror = "1.0.0"
+once_cell = "1.10"
 egui = "0.18.1"
 
 [features]
