--- a/egui-d3d11/Cargo.toml
+++ b/egui-d3d11/Cargo.toml
@@ -30,7 +30,7 @@ force-compile = []
 save-blob = []
 
 [dependencies.windows]
-version = "0.32"
+version = "0.36"
 features = [
     "Win32_UI_Input_KeyboardAndMouse",
     "Win32_System_WindowsProgramming",
@@ -43,5 +43,6 @@ features = [
     "Win32_System_DataExchange",
     "Win32_Graphics_Dxgi",
     "Win32_Graphics_Hlsl",
+    "Win32_System_Memory",
     "Win32_Foundation"
 ]
