--- a/egui-d3d11/Cargo.toml
+++ b/egui-d3d11/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "egui-d3d11"
-version = "0.7.0"
+version = "0.7.1"
 edition = "2021"
 authors = ["sy1ntexx"]
 description = "D3D11 backend for egui library."
@@ -21,6 +21,7 @@ once_cell = "1.10"
 egui = "0.18.1"
 
 [features]
+# Removes all message prints.
 no-msgs = []
 # Debug feature, enables clearing of the view.
 clear = []
