--- a/egui-d3d11/Cargo.toml
+++ b/egui-d3d11/Cargo.toml
@@ -15,13 +15,15 @@ default-target = "x86_64-pc-windows-msvc"
 targets = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]
 
 [dependencies]
-parking_lot = "0.11.2"
+spin = { version = "0.9.4", optional = true, features = ["lock_api"] }
+parking_lot = { version = "0.11.2", optional = true }
 clipboard = "0.5.0"
 thiserror = "1.0.0"
 once_cell = "1.10"
 egui = "0.18.1"
 
 [features]
+default = ["dep:parking_lot"]
 # Removes all message prints.
 no-msgs = []
 # Debug feature, enables clearing of the view.
@@ -30,6 +32,8 @@ clear = []
 force-compile = []
 # Enables saving shader byte code into file on compile.
 save-blob = []
+# Use spinlocks
+spin-lock = ["dep:spin"]
 
 [dependencies.windows]
 version = "0.36"
