--- a/egui-d3d11/Cargo.toml
+++ b/egui-d3d11/Cargo.toml
@@ -20,10 +20,11 @@ parking_lot = { version = "0.11.2", optional = true }
 clipboard = "0.5.0"
 thiserror = "1.0.0"
 once_cell = "1.10"
+lock_api = "0.4.7"
 egui = "0.18.1"
 
 [features]
-default = ["dep:parking_lot"]
+default = []
 # Removes all message prints.
 no-msgs = []
 # Debug feature, enables clearing of the view.
@@ -34,6 +35,8 @@ force-compile = []
 save-blob = []
 # Use spinlocks
 spin-lock = ["dep:spin"]
+# Use parking lot
+parking-lot = ["dep:parking_lot"]
 
 [dependencies.windows]
 version = "0.36"
