Added default feature as parking-lot

--- a/egui-d3d11/Cargo.toml
+++ b/egui-d3d11/Cargo.toml
@@ -24,7 +24,7 @@ lock_api = "0.4"
 egui = "0.19"
 
 [features]
-default = []
+default = ["parking-lot"]
 # Removes all message prints.
 no-msgs = []
 # Debug feature, enables clearing of the view.
